--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-.venv
+.venv/
 femcel_venv/
 wizchan-venv/
 webscraper/
@@ -14,5 +14,8 @@ webscraper/
 .cache/
 .codetogether/
 .ctsystem
-./src/.pytest_cache
+src/.pytest_cache/
+.pytest_cache/
 .vscode/
+web_scraper.egg-info/
+build/
