--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
   "requests",
   "bs4 (>=0.0.2,<0.0.3)",
   "pytest-mock (>=3.14.0,<4.0.0)",
-  "htmldate"
+  "htmldate",
+  "basc_py4chan"
 ]
 
 [project.urls]
