Updated `MasterContentGenerator.py`'s formatting; started improving `test_MasterContentGenerator.py` so it is no longer dependent on a dummy data directory; added new testing dependencies to `pyproject.toml`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
   "bs4 (>=0.0.2,<0.0.3)",
   "pytest-mock (>=3.14.0,<4.0.0)",
   "htmldate",
-  "basc_py4chan"
+  "basc_py4chan",
+  "pyfakefs"
 ]
 
 [project.urls]
